@@ -1,6 +1,12 @@
 # ChangeLog for app-pda/synce-libsynce
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/synce-libsynce/Attic/ChangeLog,v 1.23 2008/11/13 16:24:58 mescalinum Exp $
+# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-pda/synce-libsynce/Attic/ChangeLog,v 1.24 2009/01/21 00:19:35 mescalinum Exp $
+
+*synce-libsynce-0.13 (21 Jan 2009)
+
+  21 Jan 2009; Federico Ferri <mescalinum@gentoo.org>
+  +synce-libsynce-0.13.ebuild:
+  version bump, bug #254886
 
 *synce-libsynce-0.12 (13 Nov 2008)
 *synce-libsynce-0.11.1 (13 Nov 2008)
